<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutAddUrlDialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:id="@+id/webUrlIconIv"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_web_link"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/titleDialogTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/add_url"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/webUrlIconIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/webUrlIconIv"
        app:layout_constraintTop_toTopOf="@id/webUrlIconIv" />

    <EditText
        android:id="@+id/webUrlEt"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:hint="@string/enter_url"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:includeFontPadding="false"
        android:inputType="textUri"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/white"
        android:textColorHint="@color/grayTextHint"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/titleDialogTv"
        app:layout_constraintStart_toStartOf="@id/webUrlIconIv"
        app:layout_constraintTop_toBottomOf="@id/titleDialogTv" />

    <TextView
        android:id="@+id/AddUrlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/add"
        android:textColor="@color/yellowNoteColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/webUrlEt" />

    <TextView
        android:id="@+id/cancelUrlBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/yellowNoteColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/AddUrlBtn"
        app:layout_constraintEnd_toStartOf="@id/AddUrlBtn"
        app:layout_constraintTop_toTopOf="@id/AddUrlBtn"
       />


</androidx.constraintlayout.widget.ConstraintLayout>