<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDeleteNote"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="12dp"
    android:background="@drawable/bg_dialog">

    <ImageView
        android:id="@+id/deleteIconIv"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete"
        app:tint="@color/white" />

    <TextView
        android:id="@+id/titleDialogTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/delete_note"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/deleteIconIv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/deleteIconIv"
        app:layout_constraintTop_toTopOf="@id/deleteIconIv" />

    <TextView
        android:id="@+id/subTitleDeleteNoteTv"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/ubuntu_regular"
        android:gravity="center_vertical"
        android:includeFontPadding="false"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/are_you_sure_you_want_to_delete_this_note"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="@id/titleDialogTv"
        app:layout_constraintStart_toStartOf="@id/deleteIconIv"
        app:layout_constraintTop_toBottomOf="@id/titleDialogTv" />

    <TextView
        android:id="@+id/deleteNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/delete_note"
        android:textColor="@color/redDeleteNote"
        android:textAllCaps="true"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/subTitleDeleteNoteTv" />

    <TextView
        android:id="@+id/cancelDeleteNoteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="?selectableItemBackground"
        android:fontFamily="@font/ubuntu_medium"
        android:includeFontPadding="false"
        android:padding="10dp"
        android:text="@string/cancel"
        android:textColor="@color/yellowNoteColor"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@id/deleteNoteBtn"
        app:layout_constraintEnd_toStartOf="@id/deleteNoteBtn"
        app:layout_constraintTop_toTopOf="@id/deleteNoteBtn"
        />


</androidx.constraintlayout.widget.ConstraintLayout>