<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_miscellaneous"
    android:orientation="vertical"
    app:behavior_peekHeight="44dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/titleMiscellaneousTv"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:fontFamily="@font/ubuntu_medium"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/miscellaneous"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="5">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor1"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/bg_note_color_1" />

            <ImageView
                android:id="@+id/color1Iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor2"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/bg_note_color_2" />

            <ImageView
                android:id="@+id/color2Iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                app:srcCompat="@drawable/ic_done"

                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor3"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/bg_note_color_3" />

            <ImageView
                android:id="@+id/color3Iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor4"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/bg_note_color_4" />

            <ImageView
                android:id="@+id/color4Iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                app:tint="@color/white" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/viewColor5"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:background="@drawable/bg_note_color_5" />

            <ImageView
                android:id="@+id/color5Iv"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:contentDescription="@string/app_name"
                android:padding="12dp"
                app:tint="@color/white" />

        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/pick_color"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_image"
            app:tint="@color/grayIcon" />

        <TextView
            android:id="@+id/titleAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_image"
            android:textColor="@color/grayIcon"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAddUrl"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_web_link"
            app:tint="@color/grayIcon" />

        <TextView
            android:id="@+id/titleAddUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/add_url"
            android:textColor="@color/grayIcon"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/deleteNoteLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="12dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_delete"
            app:tint="@color/redDeleteNote" />

        <TextView
            android:id="@+id/deleteNoteTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:fontFamily="@font/ubuntu_medium"
            android:includeFontPadding="false"
            android:text="@string/delete_note"
            android:textColor="@color/redDeleteNote"
            android:textSize="18sp" />
    </LinearLayout>
</LinearLayout>