<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.activity.CreateNoteActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:paddingBottom="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/backIconIv"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/grayIcon" />

            <ImageView
                android:id="@+id/doneIconIv"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/bg_done_selector"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                app:layout_constraintBottom_toBottomOf="@+id/backIconIv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/backIconIv"
                app:srcCompat="@drawable/ic_done_selector" />

            <EditText
                android:id="@+id/noteTitleEt"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="18dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_bold"
                android:hint="@string/note_title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/grayTextHint"
                android:textSize="24sp"
                app:layout_constraintTop_toBottomOf="@id/backIconIv" />

            <TextView
                android:id="@+id/dateTimeTv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_regular"
                android:includeFontPadding="false"
                android:textColor="@color/grayIcon"
                android:textColorHint="@color/grayIcon"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="@+id/noteTitleEt"
                app:layout_constraintStart_toStartOf="@+id/noteTitleEt"
                app:layout_constraintTop_toBottomOf="@id/noteTitleEt"
                tools:text="Saturday, 13 June 2020 19:30 PM" />

            <EditText
                android:id="@+id/noteSubTitleEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="20dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_medium"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textNoSuggestions"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grayTextHint"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/dateTimeTv"
                app:layout_constraintStart_toEndOf="@id/indicatorSubTitleView"
                app:layout_constraintTop_toBottomOf="@id/dateTimeTv" />

            <View
                android:id="@+id/indicatorSubTitleView"
                android:layout_width="6dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/noteSubTitleEt"
                app:layout_constraintStart_toStartOf="@id/dateTimeTv"
                app:layout_constraintTop_toTopOf="@id/noteSubTitleEt" />

            <ImageView
                android:id="@+id/imageNoteIv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:minHeight="150dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/noteSubTitleEt"
                app:layout_constraintStart_toStartOf="@id/indicatorSubTitleView"
                app:layout_constraintTop_toBottomOf="@id/noteSubTitleEt"
                tools:visibility="visible" />

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:id="@+id/deleteImageIV"
                android:background="@drawable/bg_delete_image"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/imageNoteIv"
                app:layout_constraintTop_toTopOf="@id/imageNoteIv"
                app:srcCompat="@drawable/ic_delete"
                app:tint="@color/white"
                tools:visibility="visible" />

            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@id/noteSubTitleEt"
                app:layout_constraintStart_toStartOf="@id/indicatorSubTitleView"
                app:layout_constraintTop_toBottomOf="@id/imageNoteIv"
                tools:ignore="UseCompoundDrawables"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/webUrlTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/ubuntu_regular"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/deleteWebLinkIv"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginStart="12dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/app_name"
                    android:padding="4dp"
                    app:srcCompat="@drawable/ic_delete"
                    app:tint="@color/redDeleteNote" />

            </LinearLayout>

            <EditText
                android:id="@+id/noteBodyEt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:gravity="top"
                android:hint="@string/type_note_here"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textImeMultiLine"
                android:minHeight="120dp"
                android:textColor="@color/white"
                android:textColorHint="@color/grayTextHint"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/noteSubTitleEt"
                app:layout_constraintStart_toStartOf="@id/indicatorSubTitleView"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <include
        android:id="@+id/bottomSheetLayout"
        layout="@layout/layout_miscellaneous" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>