<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    tools:context=".ui.activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/titleMyTextTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/ubuntu_bold"
                android:includeFontPadding="false"
                android:text="@string/my_notes"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:visibility="visible" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:id="@+id/layoutMultipleDeleteNote"
                android:visibility="gone"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/closeDeleteNotesIv"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="start"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="@id/DeleteNotesIv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/DeleteNotesIv"
                    app:srcCompat="@drawable/ic_close"
                    app:tint="@color/white" />

                <ImageView
                    android:id="@+id/DeleteNotesIv"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="end"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_delete"
                    app:tint="@color/white" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSearchConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/bg_search">

            <ImageView
                android:id="@+id/searchIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_search"
                app:tint="@color/graySearchIcon" />

            <EditText
                android:id="@+id/inputTextEt"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@null"
                android:fontFamily="@font/ubuntu_regular"
                android:hint="@string/search_notes"
                android:imeOptions="actionSearch"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/grayTextHint"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@id/searchIv"
                app:layout_constraintEnd_toStartOf="@+id/closeIv"
                app:layout_constraintStart_toEndOf="@id/searchIv"
                app:layout_constraintTop_toTopOf="@id/searchIv" />

            <ImageView
                android:id="@+id/closeIv"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_close"
                app:tint="@color/graySearchIcon" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="2dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="8dp"
            android:clipToPadding="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/quickActionLinearLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/quickActionLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkQuickActionBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <ImageView
                android:id="@+id/addNoteIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_add_outline"
                app:tint="@color/grayIcon" />

            <ImageView
                android:id="@+id/addImageIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_image"
                app:tint="@color/grayIcon" />

            <ImageView
                android:id="@+id/addLinkIv"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/app_name"
                app:srcCompat="@drawable/ic_web_link"
                app:tint="@color/grayIcon" />
        </LinearLayout>

        <ImageView
            android:id="@+id/addNoteMainIv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="bottom|end"
            android:layout_marginEnd="32dp"
            android:background="@drawable/bg_fab_add"
            android:contentDescription="@string/app_name"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/quickActionLinearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/quickActionLinearLayout"
            app:srcCompat="@drawable/ic_add"
            app:tint="@color/dark" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
